--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.4.31"
     ext.hilt_version = '2.33-beta'
+    ext.room_version = "2.2.6"
 
     repositories {
         google()
