--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.kotlin_version = "1.4.31"
     ext.hilt_version = '2.33-beta'
     ext.room_version = "2.2.6"
+    ext.coroutine_version= '1.4.2'
 
     repositories {
         google()
