--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.hilt_version = '2.33-beta'
     ext.room_version = "2.2.6"
     ext.coroutine_version= '1.4.2'
+    ext.material_version= '1.3.0'
 
     repositories {
         google()
