--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     ext.room_version = "2.2.6"
     ext.coroutine_version= '1.4.2'
     ext.material_version= '1.3.0'
+    ext.kotest_version='4.4.3'
+    ext.mockk_version= '1.10.6'
 
     repositories {
         google()
