Tests for View Model calculator

--- a/mwidgets/build.gradle
+++ b/mwidgets/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutine_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_ktx_version"
+
+    testImplementation "app.cash.turbine:turbine:$turbine_version"
 
 
 
