--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     ext.material_version= '1.3.0'
     ext.kotest_version='4.4.3'
     ext.mockk_version= '1.10.6'
+    ext.turbine_version= '0.4.1'
+    ext.viewmodel_ktx_version= '2.3.1'
 
     repositories {
         google()
