--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
 
 dependencies {
     api project(':mdesign')
-    implementation project(':mTransaction')
+    api project(':mTransaction')
     implementation project(':mdatabase')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
