--- a/mTransaction/build.gradle
+++ b/mTransaction/build.gradle
@@ -37,7 +37,7 @@ android {
 
 dependencies {
 
-    implementation project(':mwidgets')
+    api project(':mwidgets')
     implementation project(':mdesign')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
