--- a/.github/workflows/staging_workflow.yml
+++ b/.github/workflows/staging_workflow.yml
@@ -2,9 +2,9 @@ name: Android CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ staging ]
   pull_request:
-    branches: [ main ]
+    branches: [ staging ]
 
 jobs:
   build:
