--- a/.github/workflows/staging_workflow.yml
+++ b/.github/workflows/staging_workflow.yml
@@ -13,10 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: set up JDK 8
+    - name: set up JDK 11
       uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        java-version: '11'
+        distribution: 'adopt'
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
