--- a/.github/workflows/staging_workflow.yml
+++ b/.github/workflows/staging_workflow.yml
@@ -23,3 +23,17 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+      
+  test:
+    name: Run Unit Tests
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Setup JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Run Tests
+        run: bash ./gradlew test --stacktrace
