--- a/.github/workflows/staging_workflow.yml
+++ b/.github/workflows/staging_workflow.yml
@@ -7,7 +7,7 @@ on:
     branches: [ staging ]
 
 jobs:
-  build:
+  buildAndTest:
 
     runs-on: ubuntu-latest
 
@@ -23,17 +23,6 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Run Tests
+      run: bash ./gradlew test --stacktrace
       
-  test:
-    name: Run Unit Tests
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Setup JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Run Tests
-        run: bash ./gradlew test --stacktrace
